...
                app:srcCompat="@drawable/ic_account"
                android:scaleType="centerCrop"/>

        </LinearLayout>

             <android.support.v7.widget.Toolbar
                 android:id="@+id/toolbar2"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
                 android:layout_weight="1"
                 android:background="#00FFFFFF"

                 app:layout_scrollFlags="scroll|enterAlways"
...
            android:layout_margin="12dp"/>

    </LinearLayout>


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/favButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|clip_vertical|right"
        android:layout_marginRight="12dp"
        android:clickable="true"
        android:elevation="10dp"
...
